# sttx

./: Cargo.toml  LICENSE  README.md  flake.nix  result
src/: README.md  args.rs  lib.rs  main.rs  transcribe.rs
src/app/: input.rs  mod.rs  output.rs
src/app/cmd/: mod.rs  transform.rs
