[package]
name = "sttx"
description = "Utility belt for transforming speech-to-text data"
keywords = [
  "stt",
  "speech-to-text",
  "timeseries",
  "utility",
  "whisper.cpp"
]
categories = [
  "data-structures",
  "text-processing",
  "value-formatting",
  "visualization"
]
readme = "README.md"
repository = "https://github.com/dev-msp/sttx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3.0"
itertools = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
